@@ -99,8 +99,10 @@ bool RGUserDialog::showErrors()
    int id = _config->FindI("Volatile::ParentWindowId", -1);
    if (id > 0) {
       GdkWindow *win = gdk_window_foreign_new(id);
-      gtk_widget_realize(dia);
-      gdk_window_set_transient_for(GDK_WINDOW(dia->window), win);
+      if(win) {
+	 gtk_widget_realize(dia);
+	 gdk_window_set_transient_for(GDK_WINDOW(dia->window), win);
+      }
    }
 
    gtk_dialog_run(GTK_DIALOG(dia));
@@ -188,8 +190,10 @@ bool RGUserDialog::message(const char *msg,
    int id = _config->FindI("Volatile::ParentWindowId", -1);
    if (id > 0) {
       GdkWindow *win = gdk_window_foreign_new(id);
-      gtk_widget_realize(dia);
-      gdk_window_set_transient_for(GDK_WINDOW(dia->window), win);
+      if(win) {
+	 gtk_widget_realize(dia);
+	 gdk_window_set_transient_for(GDK_WINDOW(dia->window), win);
+      }
    }
 
    gtk_dialog_run(GTK_DIALOG(dia));
@@ -235,8 +239,10 @@ bool RGGladeUserDialog::init(const char *name)
    int id = _config->FindI("Volatile::ParentWindowId", -1);
    if (id > 0 && _parentWindow == NULL) {
       GdkWindow *win = gdk_window_foreign_new(id);
-      gtk_widget_realize(_dialog);
-      gdk_window_set_transient_for(GDK_WINDOW(_dialog->window), win);
+      if(win) {
+	 gtk_widget_realize(_dialog);
+	 gdk_window_set_transient_for(GDK_WINDOW(_dialog->window), win);
+      }
    }
 
    g_free(filename);
