@@ -30,6 +30,8 @@ synaptic (0.58) UNRELEASED; urgency=low
   * when generating the wget script, use wget -c
   * po/cs.po:
     - updated (thanks to Vit Pelcak)
+  * gtk/rguserdialog.cc, gtk/rggladewindow.cc:
+    - do not crash for invalid parent-window-ids
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  6 Mar 2007 17:22:30 +0100
 
